<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:summary="@string/pref_app_summary"
        android:title="@string/pref_app_title" />

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:summary="@string/pref_version_summary"
        android:title="@string/pref_version_title" />

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:summary="@string/pref_developer_summary"
        android:title="@string/pref_developer_title" />

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_share_key"
        android:summary="@string/pref_share_summary"
        android:title="@string/pref_share_title" />

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_rate_review_key"
        android:summary="@string/pref_rate_review_summary"
        android:title="@string/pref_rate_review_title" />

</PreferenceScreen>